crates/executor/src/tests/snapshots/query_qualify.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT product_id, retail_price, quantity, city\n    FROM sales\n    QUALIFY ROW_NUMBER() OVER (PARTITION BY city ORDER BY retail_price) = 1;\""
---
Ok(
    [
        "+------------+--------------+----------+---------+",
        "| product_id | retail_price | quantity | city    |",
        "+------------+--------------+----------+---------+",
        "| 2          | 5.0          | 16       | Miami   |",
        "| 2          | 5.0          | 32       | Orlando |",
        "| 1          | 2.0          | 1        | SF      |",
        "| 1          | 2.0          | 2        | SJ      |",
        "+------------+--------------+----------+---------+",
    ],
)
